--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
                                             <action selector="shareit:" destination="vXZ-lx-hvc" id="1qg-17-OtA"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="My memes" width="354" id="BwS-vv-3Mk">
+                                    <barButtonItem title="Cancel" width="354" id="BwS-vv-3Mk">
                                         <connections>
                                             <segue destination="x69-La-acL" kind="show" id="B9u-Ym-55I"/>
                                         </connections>
@@ -268,10 +268,11 @@
             <objects>
                 <tableViewController storyboardIdentifier="SentMemesVC" id="Cuh-Pc-5eG" userLabel="Sent Memes" customClass="SentMemesVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="erv-9R-R7D">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Zup-Yz-4UQ">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Zup-Yz-4UQ" userLabel="MemeTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zup-Yz-4UQ" id="n26-P3-Ofu">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -300,30 +301,31 @@
         <!--Meme Details VC-->
         <scene sceneID="U2d-pe-e1c">
             <objects>
-                <viewController id="4pJ-0d-S55" userLabel="Meme Details VC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="memeDetailVC" id="4pJ-0d-S55" userLabel="Meme Details VC" customClass="memeDetailVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1EJ-Rg-Vvl"/>
                         <viewControllerLayoutGuide type="bottom" id="2cy-yZ-AOe"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Aa5-YF-YZd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="im8-mf-D4v">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gU2-VY-46s">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="20" width="400" height="780"/>
+                                    <rect key="frame" x="0.0" y="-168" width="416" height="852"/>
                                 </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="im8-mf-D4v"/>
+                                <exclude reference="gU2-VY-46s"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
-                                <include reference="im8-mf-D4v"/>
+                                <include reference="gU2-VY-46s"/>
                             </mask>
                         </variation>
                     </view>
@@ -368,39 +370,6 @@
             </objects>
             <point key="canvasLocation" x="1168.5" y="444"/>
         </scene>
-        <!--Sent Memes-->
-        <scene sceneID="1JX-9p-eEh">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wDN-Wm-TQg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="chb-Cr-ae1">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Tk8-ve-Dvb">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                    <cells>
-                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NRh-mJ-xli">
-                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                        </collectionViewCell>
-                    </cells>
-                </collectionView>
-                <tableViewController id="iZ5-vR-rMF" userLabel="Sent Memes" customClass="MemesCollection" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="My Memes" id="fDJ-8N-x3u" userLabel="Sent Memes">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mwO-r0-zSC"/>
-                    </navigationItem>
-                </tableViewController>
-            </objects>
-            <point key="canvasLocation" x="2977.5" y="868.5"/>
-        </scene>
         <!--collection-->
         <scene sceneID="QAt-cx-cxJ">
             <objects>
@@ -411,12 +380,54 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="iZ5-vR-rMF" kind="relationship" relationship="rootViewController" id="aci-Qb-9uc"/>
+                        <segue destination="qpa-TE-w6q" kind="relationship" relationship="rootViewController" id="1By-ee-X7L"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="avU-ob-mbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2047.5" y="868.5"/>
+        </scene>
+        <!--My Memes-->
+        <scene sceneID="3ch-uh-L5j">
+            <objects>
+                <viewController id="qpa-TE-w6q" customClass="MemeCollectionVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aIo-tx-WI5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZXR-rf-RLo">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CollectionMemeCell" id="rUH-rS-Ao3" customClass="memeCollectionViewCell" customModule="MemeApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                    </collectionView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="My Memes" id="vjB-vV-O5l" userLabel="Sent Memes">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jYy-E2-yzh">
+                            <connections>
+                                <action selector="addButton:" destination="qpa-TE-w6q" id="gCz-H6-xWZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="appCollectionView" destination="aIo-tx-WI5" id="f7j-hG-gVn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JuB-fZ-87h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2971.5" y="868.5"/>
         </scene>
     </scenes>
     <resources>
