--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x69-La-acL">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -85,11 +85,12 @@
                                             <action selector="useCamera:" destination="vXZ-lx-hvc" id="65T-YI-vjH"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Album" width="347" id="mna-bS-SmR">
+                                    <barButtonItem title="Album" width="100" id="mna-bS-SmR">
                                         <connections>
                                             <action selector="useCameraRoll:" destination="vXZ-lx-hvc" id="PjL-Fc-Iqp"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="EvQ-t3-k9z"/>
                                 </items>
                                 <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
@@ -126,7 +127,8 @@
                                             <action selector="shareit:" destination="vXZ-lx-hvc" id="1qg-17-OtA"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Cancel" width="354" id="BwS-vv-3Mk">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Djy-yu-mUi"/>
+                                    <barButtonItem title="Cancel" id="BwS-vv-3Mk">
                                         <connections>
                                             <segue destination="x69-La-acL" kind="show" id="B9u-Ym-55I"/>
                                         </connections>
@@ -267,15 +269,32 @@
         <scene sceneID="kW2-7X-ijU">
             <objects>
                 <tableViewController storyboardIdentifier="SentMemesVC" id="Cuh-Pc-5eG" userLabel="Sent Memes" customClass="SentMemesVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="erv-9R-R7D">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="erv-9R-R7D">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Zup-Yz-4UQ" userLabel="MemeTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemeTableViewCell" textLabel="D6a-TF-4ah" detailTextLabel="3YX-Aq-ah2" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="Zup-Yz-4UQ" userLabel="MemeTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zup-Yz-4UQ" id="n26-P3-Ofu">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="D6a-TF-4ah">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3YX-Aq-ah2">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d9q-eq-rbh">
+                                            <rect key="frame" x="150" y="0.0" width="200" height="99"/>
+                                        </imageView>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -285,7 +304,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="My Memes" id="O1K-hf-V5w" userLabel="Sent Memes">
+                    <navigationItem key="navigationItem" title="Sent Memes" id="O1K-hf-V5w" userLabel="Sent Memes">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="FH2-8M-1X1">
                             <connections>
                                 <action selector="createNewMemes:" destination="Cuh-Pc-5eG" id="5zc-JW-P8y"/>
@@ -296,7 +315,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ic8-g6-Gyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2935.5" y="-11.25"/>
+            <point key="canvasLocation" x="2935" y="-12"/>
         </scene>
         <!--Meme Details VC-->
         <scene sceneID="U2d-pe-e1c">
@@ -329,6 +348,9 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="gU2-VY-46s" id="iIX-4b-VDW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C2P-zb-Tff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -380,54 +402,65 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="qpa-TE-w6q" kind="relationship" relationship="rootViewController" id="1By-ee-X7L"/>
+                        <segue destination="b2v-nS-pqh" kind="relationship" relationship="rootViewController" id="t6h-Jv-h1C"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="avU-ob-mbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2047.5" y="868.5"/>
         </scene>
-        <!--My Memes-->
-        <scene sceneID="3ch-uh-L5j">
+        <!--Sent Memes-->
+        <scene sceneID="1Uz-z9-Gyr">
             <objects>
-                <viewController id="qpa-TE-w6q" customClass="MemeCollectionVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aIo-tx-WI5">
+                <collectionViewController id="b2v-nS-pqh" userLabel="Sent Memes" customClass="MemeCollectionVC" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Ql2-px-lFh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZXR-rf-RLo">
-                            <size key="itemSize" width="50" height="50"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pJz-47-vIq">
+                            <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="5" minY="10" maxX="5" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CollectionMemeCell" id="rUH-rS-Ao3" customClass="memeCollectionViewCell" customModule="MemeApp" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionMemeCell" id="kWC-gj-185" customClass="memeCollectionViewCell" customModule="MemeApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" placeholderIntrinsicWidth="150" placeholderIntrinsicHeight="150" translatesAutoresizingMaskIntoConstraints="NO" id="v9H-fm-EM7">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        </imageView>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <size key="customSize" width="150" height="150"/>
+                                <connections>
+                                    <outlet property="memeImageView" destination="v9H-fm-EM7" id="Voi-Mr-UhS"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="b2v-nS-pqh" id="Udx-W3-8HI"/>
+                            <outlet property="delegate" destination="b2v-nS-pqh" id="WHn-RF-Ec4"/>
+                        </connections>
                     </collectionView>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="My Memes" id="vjB-vV-O5l" userLabel="Sent Memes">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jYy-E2-yzh">
+                    <navigationItem key="navigationItem" title="Sent Memes" id="8Pb-a0-lgr" userLabel="Sent Memes">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ho4-CR-STq">
                             <connections>
-                                <action selector="addButton:" destination="qpa-TE-w6q" id="gCz-H6-xWZ"/>
+                                <action selector="addButton:" destination="b2v-nS-pqh" id="L38-Iy-fnb"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="appCollectionView" destination="aIo-tx-WI5" id="f7j-hG-gVn"/>
+                        <outlet property="appCollectionView" destination="Ql2-px-lFh" id="8ng-qo-KeL"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JuB-fZ-87h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xmR-ts-TRS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2971.5" y="868.5"/>
+            <point key="canvasLocation" x="2804" y="868"/>
         </scene>
     </scenes>
     <resources>
